solve dark theme not showing on some components

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,6 @@
 .App {
   min-height: 100vh;
+  transition: background-color 0.2s linear;
 }
 
 .App-content {
